<resources>
    <string name="app_name">Roomies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="slogan">The app for roommates!</string>
    <string name="facebook_app_id">1647866078809318</string>
    <string name="roomies">Roomies</string>
    <string name="chores">Chores</string>
    <string name="expenses">Expenses</string>
    <string name="pantry">Pantry</string>
    <string name="settings">Settings</string>
    <string name="base_url">http://192.168.0.17:8080/api</string>
    <string name="Roommates">Roommates</string>
    <string name="your_roommates">Your roommates</string>
    <string name="invite_roommate">Invite roommates</string>
    <string name="leave_group">Leave group</string>
    <string name="no_group_message">Create a new group of roommates or join one!</string>
    <string name="create_group">Create group</string>
    <string name="invites">Invites</string>
    <string name="no_invites">No Invites</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="leave_group_owner">You are the owner of this group. Leaving it will cause it to be disbanded.\n\nAre you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invited">Invited</string>
    <string name="title_activity_roommate_search">RoommateSearchActivity</string>
    <string name="enter_roommate_name">Enter roommate name</string>
    <string name="invite_instruction">Tap a user to invite them</string>
    <string name="leave_group_prompt">Are you sure you want to leave this group?</string>
    <string name="uninvite_prompt">"Are you sure you want to uninvite "</string>
    <string name="kick_prompt">"Are you sure you want to kick "</string>
    <string name="title_activity_chores">Chores</string>
    <string name="create_new_chore">Create new chore</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="create_chore">Create chore</string>
    <string name="chore_title_hint">Title</string>
    <string name="no_chore_title_message">Please enter a chore title</string>
    <string name="chore_created">Chore created</string>
    <string name="no_chores">No chores, create one!</string>
    <string name="remove_chore_prompt">Would you like to remove this chore?</string>
    <string name="chore_removed">Chore removed</string>
    <string name="title_activity_expenses">Expenses</string>
    <string name="no_expenses">No expenses, create one!</string>
    <string name="create_new_expense">Create new expense</string>
    <string name="expense_title_hint">Title</string>
    <string name="expense_amount_hint">Amount</string>
    <string name="create_expense">Create expense</string>
    <string name="no_expense_title">Please enter a valid expense title</string>
    <string name="invalid_expense_amount">Please enter a valid expense amount</string>
    <string name="expense_created">Expense created</string>
    <string name="remove_expense_prompt">Are you sure you want to remove this expense?</string>
    <string name="expense_removed">Expense removed</string>
    <string name="title_activity_pantry">Pantry</string>
    <string name="no_pantry_items">No pantry items, create one!</string>
    <string name="create_new_pantry_item">Create new pantry item</string>
    <string name="pantry_title_hint">Title</string>
    <string name="no_pantry_title_message">Please enter a pantry item title</string>
    <string name="pantry_item_removed">Pantry item removed</string>
    <string name="pantry_item_created">Pantry item created</string>
    <string name="remove_pantry_item_prompt">Are you sure you want to remove this pantry item?</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="app_info">Roomies App\nVersion: 1.0.0</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_prompt">Are you sure you want to sign out?</string>
</resources>
