<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.munaz.roomies.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <include layout="@layout/loading" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/roomies"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/no_group_exists"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_group_message" />

        <Button
            android:id="@+id/create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_group" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/invites_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/invites"
            android:textSize="24sp" />

        <ListView
            android:id="@+id/invites"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_exists"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/your_roommates" />

        <ListView
            android:id="@+id/roommates"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"></ListView>

        <Button
            android:id="@+id/add_new_roommate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invite_roommate" />

        <Button
            android:id="@+id/leave_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave_group" />

    </LinearLayout>

</LinearLayout>
